파일 업로드 구현중

--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -25,3 +25,8 @@ logging:
         type:
           descriptor:
             sql: trace
+
+file:
+  upload:
+    path: C:/uploads/
+    url: /uploads/
